--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.css' rel='stylesheet' />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
  
-    <title>React App</title>
+    <title>Delivery App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
